--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,18 @@
             <artifactId>JDA</artifactId>
             <version>4.2.0_204</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.Vatuu</groupId>
+            <artifactId>discord-rpc</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
 
     <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
         <repository>
             <id>jcenter</id>
             <name>jcenter-bintray</name>
